--- a/report/Solution.tex
+++ b/report/Solution.tex
@@ -116,9 +116,9 @@ As the value ``endpoint'' is never mutated, we can reuse the endpoint and be ass
 
 To add a loop to the protocol, we add a call to ``looped()'' at the end.
 \begin{lstlisting}[style=myScalastyle]
- val client = endpoint send aString receive aString looped()
+ val client = endpoint sends aString receives aString looped()
 \end{lstlisting}
-When the protocol state reaches looped(), it will return the state to the first defined step, in this case ``send aString'' 
+When the protocol state reaches looped(), it will return the state to the first defined step, in this case ``sends aString'' 
 
 Another feature that we have added is that sometimes the order of messages is irrelevant. For example in a chat application, we want the participants to be able to send and receive in any possible order. For allowing this we have implemented the method ``anyone'' that represents being the sender or receiver of the current message is unimportant.
 
@@ -191,7 +191,7 @@ When a message is encrypted, a validator will have no way to determine if it is 
 case class DelayedValidation(input: String, validator: Validator)
 \end{lstlisting}
 
-DelayedValidator has two attributes, a string and a validator. The string is the encrypted message and the Validator is going to validate the decrypted input. Once the consumer receives a DelayedValidator message it will decrypt the input and pass it back to the Protocol Monitor. The Protocol Monitor will then verify whether the message is valid. This provides us with consistency as it is always the PM that handles validation of messages.
+DelayedValidator has two attributes, a string and a validator. The string is the encrypted message and the Validator is going to validate the decrypted input. Once the consumer receives a DelayedValidator message it will decrypt the input and pass it back to the Protocol Monitor. The Protocol Monitor will then verify whether the message is valid. This provides us with consistency as it is always the PM that handles validation of messages. The DelayedValidation will also be useful in the cases where you accidentally send unencrypted values that should be encrypted. As the the attempt to decrypt a value that is not encrypted will throw an exception, we will not send it and stop the protocol.
    
 %Ultimately we will need decide whether we should be able to define conditional steps. For example in the Diffie-Hellman-Merkle protocol, the secure public key must be agreed by both parties. If one client  
 %
