--- a/report/Appendix.tex
+++ b/report/Appendix.tex
@@ -4,4 +4,9 @@ To run the project only one tool is required, Simple Build Tool. SBT can be down
 
 When sbt is installed you need to navigate to the project folder containing ``build.sbt'' and run ``sbt''. This will download all dependencies and start the sbt console. 
 
-Simply type ``run'' here to compile and start the application. There are two main files within the applications that you can start, the Server and Client for the secure chat application.
+Simply type ``run'' inside the sbt console to compile and start the application. There are two main files within the applications that you can start, the Server and Client for the secure chat application. Simply start 3 sbt consols for testing the system. First start the server, then the two clients.
+
+\\\\
+The perhaps most interesting source file to look at is the ProtocolBuilder().
+
+
