Minor changes for the report

--- a/report/Appendix.tex
+++ b/report/Appendix.tex
@@ -1,5 +1,5 @@
 \section{Appendix}
-\section*{Appendix A: How to run}
+\section*{Appendix A: How to run the Secure Chat Server}
 To run the project only one tool is required, Simple Build Tool. SBT can be downloaded and installed from \href{http://www.scala-sbt.org/}{http://www.scala-sbt.org/}
 
 When sbt is installed you need to navigate to the project folder containing ``build.sbt'' and run ``sbt''. This will download all dependencies and start the sbt console. 
@@ -7,6 +7,6 @@ When sbt is installed you need to navigate to the project folder containing ``bu
 Simply type ``run'' inside the sbt console to compile and start the application. There are two main files within the applications that you can start, the Server and Client for the secure chat application. Simply start 3 sbt consols for testing the system. First start the server, then the two clients.
 
 \\\\
-The perhaps most interesting source file to look at is the ProtocolBuilder().
+The perhaps most interesting source file to look at is the ProtocolBuilder.
 
 
