--- a/report/Conclusion.tex
+++ b/report/Conclusion.tex
@@ -5,9 +5,9 @@ Our DSL provides a natural way for specifying protocols that help us reason abou
 
 The usefulness of our DSL has been proven by our implementation of a chat server. This server allows multiple participants to connect and initiate a Diffie-Hellman-Merkel key exchange to establish a secure communication channel to both the server and all connecting clients. Allowing chat participants to exchange messages that only the recipient and sender can decrypt. We have also verified that the actual data being transmitted over the network is encrypted and in the order we have specified. We have also seen that the system is capable of handling a large amount users simultaneously generating requests that must be responded.
 
-The overhead of our solution has been calculated to be around 20\%. A reasonable penalty to be paid for enabling run-time checks. The DSL does still provide its usefulness when performance is the main priority of a system. In these situations we can use the DSL to test a system, not run it. This way we can enable run-time checks on a system while still having the freedom to create the system however desired.
+The overhead of our solution has been calculated to be around 20\%. A reasonable penalty to be paid for enabling run-time checks. The DSL does still provide its usefulness when performance is the main priority of a system. In these situations we can use the DSL to test a system, not run it. This way we can enable run-time checks on a system while still having the freedom to create the system how ever we desire.
 
-We believe that our solution provides an excellent base for development and implementation of network protocols. It provides a clear advantage in that it also helps create the actual implementation of the protocol, unlike a model checker. It does however not solve all the issues involved with the correct implementation of a protocol. We have examined the case of Apple's Goto bug and seen that it is not a single tool that can solve all problems. Development teams must focus on implementing what are regarded as best practices in software development. Practices such as peer review, testing and coding standards must be in place to help ensure successful implementations. 
+We believe that our solution provides an excellent base for development and implementation of network protocols. It provides a clear advantage in that it also helps create the actual implementation of the protocol, unlike a model checker. It does however not solve all the issues involved with the correct implementation of a protocol. We have examined the case of Apple's Goto bug and seen that it is not a single tool that can solve all problems. Development teams must focus on implementing what are regarded as best practices in software development. Practices such as peer review, testing and coding standards must be in place to reap the full benefit of our system.
 
 
 \subsection{Future Work}
